# django-oauth-usp

./: .gitignore  README.md  README.rst  manage.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: invent.yaml
.test/: pyvenv.cfg
django_oauth_usp/: settings.py
django_oauth_usp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
django_oauth_usp/accounts/: apps.py  managers.py  middleware.py  models.py  oauth.py
django_oauth_usp/accounts/migrations/: 0001_initial.py
django_oauth_usp/accounts/templates/: account_main.html  user.html
django_oauth_usp/accounts/tests/: mock.py  test_accounts_models.py  test_accounts_transform.py  test_accounts_views.py  test_oauth.py  test_user_middleware.py
