[metadata]
name = django-oauth-usp
version = 0.1
description = Um app do Django para autenticação utilizando o OAuth USP.
long_description = file: README.rst
url = https://github.com/marcelosf/django-oauth-usp
author = Marcelo Schneider
author_email = schneider.fei@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find: